Prevent scrollbar when sidebar is collapsed

--- a/acedirect/public/dro/css/complaint_form.css
+++ b/acedirect/public/dro/css/complaint_form.css
@@ -242,6 +242,9 @@ body {
 .tab:first-child {
   border-right: transparent !important;
 }
+.tabsWidthClass {
+  width: 110%;
+}
 
 #collapseButton {
   border-radius: 50%;
